# tale-of-the-bagger

./: CNAME  Cargo.toml  README.md  index.html  tale-of-the-bagger-241cb4381a7fd5ea.js  tale-of-the-bagger-25fb8e106290b3a0.js  tale-of-the-bagger-30d577c551e1da70.js  tale-of-the-bagger-56293e4f74adee2c.js  tale-of-the-bagger-5ba037c07bcb1b93.js  tale-of-the-bagger-65a50f40c5048206.js  tale-of-the-bagger-7956af5b2c6ab135.js  tale-of-the-bagger-7ecb045c822fa783.js  tale-of-the-bagger-95121807a55571c0.js  tale-of-the-bagger-956cadd8ad349485.js  tale-of-the-bagger-9afdde088dd054bc.js  tale-of-the-bagger-a45229b47fcb35f4.js  tale-of-the-bagger-c6609ecb0130d063.js  tale-of-the-bagger-df57acb92eb3acd8.js  tale-of-the-bagger-f4606334e011f4e2.js  tale-of-the-bagger-f7172d1263fff57c.js
.github/workflows/: deploy-page.yaml  release.yaml
assets/spines/bag/: skeleton.json
assets/spines/customer/: skeleton.atlas  skeleton.json
assets/spines/desk/: skeleton.atlas  skeleton.json
assets/spines/health/: skeleton.atlas  skeleton.json
assets/spines/menu/: skeleton.atlas  skeleton.json
assets/spines/products/ak47/: skeleton.atlas  skeleton.json
assets/spines/products/antifreeze/: skeleton.atlas  skeleton.json
assets/spines/products/avocado/: skeleton.atlas  skeleton.json
assets/spines/products/bacon/: skeleton.atlas  (+1 more)
macros/: Cargo.toml
macros/src/: asset_collection.rs  lib.rs
spine/bag/: bag.spine
spine/customer/: customer.spine  customer.xcf
spine/desk/: desk.spine
spine/health/: health.spine
spine/menu/: menu.spine
spine/products/ak47/: ak47.spine
spine/products/antifreeze/: antifreeze.spine
spine/products/avocado/: avocado.spine
spine/products/bacon/: bacon.spine
spine/products/batteries/: batteries.spine
spine/products/beans/: beans.spine
spine/products/beer/: beer.spine
spine/products/bleach/: bleach.spine
spine/products/boiling-water/: boiling-water.spine
spine/products/bowling-ball/: bowling-ball.spine
spine/products/bread/: bread.spine
spine/products/chicken/: chicken.spine
spine/products/cinder/: cinder.spine
spine/products/cocaine/: cocaine.spine
spine/products/coffee/: coffee.spine
spine/products/eggs/: eggs.spine
spine/products/good-stuff/: good-stuff.spine
spine/products/heart/: heart.spine
spine/products/ice/: ice.spine
spine/products/ice-cream/: ice-cream.spine
spine/products/jerky/: jerky.spine
spine/products/katana/: katana.spine
spine/products/ketchup/: ketchup.spine
spine/products/milk/: milk.spine
spine/products/plate/: plate.spine
spine/products/rocket-fuel/: rocket-fuel.spine
spine/products/skull/: skull.spine
spine/products/soup/: soup.spine
spine/products/taco/: taco.spine
spine/products/torch/: torch.spine
spine/products/watermelon/: watermelon.spine
spine/products/xxx/: xxx.spine
src/: app_state.rs  asset_library.rs  lib.rs  main.rs
src/common/: asset_collection.rs  clear_scene.rs  collision.rs  control.rs  embedded_assets.rs  force_camera_ratio.rs  game_input.rs  hoverable.rs  interactable.rs  mod.rs  plugins.rs  transform2.rs  version.rs
src/game/: ambience.rs  bag.rs  container.rs  conveyor.rs  customer.rs  depths.rs  desk.rs  game.rs  health.rs  mod.rs  plugin.rs  product.rs
src/game/products/: ak47.rs  antifreeze.rs  avocado.rs  bacon.rs  batteries.rs  beans.rs  beer.rs  bleach.rs  boiling_water.rs  bowling_ball.rs  bread.rs  chicken.rs  cinder.rs  cocaine.rs  coffee.rs  eggs.rs  good_stuff.rs  heart.rs  ice.rs  ice_cream.rs  jerky.rs  katana.rs  ketchup.rs  kind.rs  milk.rs  mod.rs  plate.rs  plugins.rs  rocket_fuel.rs  skull.rs  soup.rs  taco.rs  torch.rs  watermelon.rs  xxx.rs
src/loading/: plugin.rs
src/menu/: menu.rs  mod.rs  plugin.rs
(+56 files in other folders)
