[package]
name = "tale-of-the-bagger"
version = "0.1.0"
publish = false
authors = ["jabu <jabu@gx.ag>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]
embedded_assets = [
    "include_dir"
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12" }
rand = { version = "0.8.3" }
lerp = { version = "0.4" }
include_dir = { version = "0.7", optional = true }
bevy_spine = { git = "https://github.com/jabuwu/bevy_spine", rev = "83efea5d12b99547827236af06f8c010e4646ee0" }

tale-of-the-bagger-macros = { path = "./macros" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"

# Uncomment these lines to build for iOS
#[lib]
#crate-type = ["staticlib"]

[package.metadata.ios]
build_targets = ["aarch64-apple-ios", "aarch64-apple-ios-sim", "x86_64-apple-ios"]
dependencies = ["Metal.framework", "Security.framework", "UIKit.framework", "AudioToolbox.framework"]
